--- a/style/common.css
+++ b/style/common.css
@@ -27,20 +27,20 @@ hr { display: none; }
               font-family: 'SUIT-Regular';
             
             }
-        #header { height: 600px; background: url(../images/bg.jpg) no-repeat center center/ cover;}
+        #header {position: relative; height: 600px; background: url(../images/bg.jpg) no-repeat center center/ cover;}
         #header hgroup { position: absolute; right: 30px; bottom: 25px; color: #fff;}
         #header hgroup h1{ font-family: 'SokchoBadaDotum'; font-size: 40px; text-shadow:1px 2px 1px #000;  }
         #header hgroup p {margin-top: 25px; font-size: 20px; text-shadow: 0 2px 1px #000; }
-        #gnb {position: absolute; top: 570px; width: 1000px;}
+        #gnb {position: absolute; top: 570px; left:calc(50% - 500px); width: 1000px;}
         #gnb ul {display: flex; }
         #gnb ul li{width: 25%; }
         #gnb ul li a{display: block; width: 100%; height: 60px;
                      background: #036; color: #fff;
                     text-align: center; line-height: 60px;}
         #gnb ul li a:hover {background: #fff; color:#000; font-weight: bold;}
-        main{width: 1000px; margin:0 auto; padding: 25px 12px 0; background: #fff;}            
+        main{width: 1000px; margin:0 auto; padding: 25px 12px 0; box-sizing: border-box; background: #fff;}            
          
-        #content article h3{margin: 25pxx 0 15px;}            
+        #content article h3{margin: 25px 0 15px;}            
         #content article figure{padding: 0 0 13px 40px;}   
         
         #footer {height: 100px; padding: 20px 0; text-align: center; font-size:14px;
